[package]
name = "thrift-async"
version = "0.2.1"
authors = ["Flavien Raynaud <flavr@yelp.com>"]
description = "Almost asynchronous Thrift server implementation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flavray/rust-thrift-async"
edition = "2018"

[dependencies]
failure = "0.1"
futures = "0.1"
thrift = "0.0.4"
tokio = "0.1"
